syntax = "proto3";

package api.rebac;

option go_package = "helloworld/api/rebac;rebac";
option java_multiple_files = true;
option java_package = "api.rebac";

service Relationships {
	rpc CreateRelationships (CreateRelationshipsRequest) returns (CreateRelationshipsResponse);
	rpc ReadRelationships (ReadRelationshipsRequest) returns (ReadRelationshipsResponse);
	rpc DeleteRelationships (DeleteRelationshipsRequest) returns (DeleteRelationshipsResponse);
}

message CreateRelationshipsRequest {
	optional bool touch = 1;
	repeated Relationship relationships = 2;
}
message CreateRelationshipsResponse {}

message ReadRelationshipsRequest {
	RelationshipFilter filter = 1;
}
message ReadRelationshipsResponse {
	repeated Relationship relationships = 1;
}

message DeleteRelationshipsRequest {
	RelationshipFilter filter = 1;
}
message DeleteRelationshipsResponse {}

message RelationshipFilter {
	string object_type = 1;
	optional string object_id = 2;
	optional string relation = 3;
	optional SubjectFilter subject_filter = 4;
}

message SubjectFilter {
	optional string relation = 1;
	optional string subject_id = 2;
	string subject_type = 3;
}

message Relationship {
	ObjectReference object = 1;
	string relation = 2;
	SubjectReference subject = 3;
}

message SubjectReference {
	string relation = 1;
	ObjectReference object = 2;
}

message ObjectReference {
	string type = 1;
	string id = 2;
}


